--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     width: 100px;
     height: 30px;
 }
-h3 {
+p {
     color: white;
     padding-bottom: 15px;
     border-bottom-style: solid;
